# ClimMeteorLab

./: .pre-commit-config.yaml  CMakeLists.txt  LICENCE  README.md  calc.h  config.json  main.cpp
data/: polygons.txt
include/: axios.h  calc.h  charts.h  header.h
resources/: styles.scss
scripts/: axios.py
src/: axios.cpp
utils/: parser_arc.py
